yangi url qo'shildi
